--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <div class="jumbotron">
   <div class="container text-center">
     <h1 class="text-white">Hello, I'm Eric.</h1>      
-    <p class="text-white">I'm a software engineer.</p>
+    <p class="text-white">I'm a software engineer and data scientist.</p>
   </div>
 </div>
 
@@ -87,8 +87,8 @@
         <div class="btn-group">
           <p>
           <a type="button" class="btn btn-primary" href="https://emp4.netlify.app/#/signup?URL=https%3A%2F%2Femp4backend.herokuapp.com" target="_blank">App</a>
-          <a type="button" class="btn btn-primary" href="https://github.com/emestiza/p4frontend" target="_blank">Front-end Repo</a>
-          <a type="button" class="btn btn-primary" href="https://github.com/emestiza/p4backend" target="_blank">Back-end Repo</a>
+          <a type="button" class="btn btn-primary" href="https://github.com/em008/project-4-frontend" target="_blank">Front-end Repo</a>
+          <a type="button" class="btn btn-primary" href="https://github.com/em008/project-4-backend" target="_blank">Back-end Repo</a>
           </p>
         </div>
         <p>
@@ -103,8 +103,8 @@
         <div class="btn-group">
           <p>
           <a type="button" class="btn btn-primary" href="http://finance-tracker.surge.sh/" target="_blank">App</a>
-          <a type="button" class="btn btn-primary" href="https://github.com/emestiza/project-3-frontend" target="_blank">Front-end Repo</a>
-          <a type="button" class="btn btn-primary" href="https://github.com/emestiza/project-3-backend" target="_blank">Back-end Repo</a>
+          <a type="button" class="btn btn-primary" href="https://github.com/em008/project-3-frontend" target="_blank">Front-end Repo</a>
+          <a type="button" class="btn btn-primary" href="https://github.com/em008/project-3-backend" target="_blank">Back-end Repo</a>
           </p>
         </div>
         <p>
@@ -119,8 +119,8 @@
         <div class="btn-group">
           <p>
           <a type="button" class="btn btn-primary" href="https://job-tracker-em.netlify.app/" target="_blank">App</a>
-          <a type="button" class="btn btn-primary" href="https://github.com/emestiza/Project-2-Frontend" target="_blank">Front-end Repo</a>
-          <a type="button" class="btn btn-primary" href="https://github.com/emestiza/Project-2-Backend" target="_blank">Back-end Repo</a>
+          <a type="button" class="btn btn-primary" href="https://github.com/em008/project-2-frontend" target="_blank">Front-end Repo</a>
+          <a type="button" class="btn btn-primary" href="https://github.com/em008/project-2-frontend" target="_blank">Back-end Repo</a>
           </p>
         </div>
         <p>
@@ -130,17 +130,6 @@
         </p>
       </div>
 
-      <div class="col-lg-4">
-        <h2>Landmarks App UI</h2>
-        <div class="btn-group">
-          <p>
-          <a type="button" class="btn btn-primary" href="https://github.com/emestiza/Swift-App-Demo" target="_blank">Code Repo</a>
-          </p>
-        </div>
-        <p>
-        A app showing landmarks using Swift UI.         
-        </p>
-      </div>
 
     </div>
 
@@ -154,7 +143,7 @@
         <h2>Web Scraper</h2>
         <div class="btn-group">
           <p>
-          <a type="button" class="btn btn-primary" href="https://github.com/emestiza/Web-Scraper-Test" target="_blank">Code Repo</a>
+          <a type="button" class="btn btn-primary" href="https://github.com/em008/Python-Web-Scraper-Practice" target="_blank">Code Repo</a>
           </p>
         </div>
         <p>
@@ -165,7 +154,7 @@
         <h2>MNIST</h2>
         <div class="btn-group">
           <p>
-          <a type="button" class="btn btn-primary" href="https://github.com/emestiza/MNIST-Project" target="_blank">Code Repo</a>
+          <a type="button" class="btn btn-primary" href="https://github.com/em008/MNIST-Project" target="_blank">Code Repo</a>
           </p>
         </div>
         <p>
@@ -177,7 +166,7 @@
         <h2>MovieLens</h2>
         <div class="btn-group">
           <p>
-          <a type="button" class="btn btn-primary" href="https://github.com/emestiza/MovieLens-Project" target="_blank">Code Repo</a>
+          <a type="button" class="btn btn-primary" href="https://github.com/em008/MovieLens-Project" target="_blank">Code Repo</a>
           </p>
         </div>
         <p>
@@ -185,38 +174,6 @@
         Developed a film recommendation engine using R to analyze the MovieLens dataset. 
         </p>
       </div>
-
-    </div>
-
-  <hr class="featurette-divider">
-
-  <h1 class="display-4">DevOps</h1>
-
-    <div class="row">
-
-      <div class="col-lg-4">
-        <h2>Kubernetes Deployment</h2>
-        <div class="btn-group">
-          <p>
-          <a type="button" class="btn btn-primary" href="https://github.com/emestiza/Kubernetes-Docker-Deployment-Test" target="_blank">Code Repo</a>
-          </p>
-        </div>
-        <p>
-          Used Kubernetes and Docker to build deployment infrastructure. 
-        </p>
-      </div>
-      <div class="col-lg-4">
-        <h2>Jenkins Deployment</h2>
-        <div class="btn-group">
-          <p>
-          <a type="button" class="btn btn-primary" href="https://github.com/emestiza/simple-java-maven-app" target="_blank">Code Repo</a>
-          </p>
-        </div>
-        <p>
-        Used Jenkins to build Java deployment infrastructure.         
-        </p>
-      </div>
-      
 
     </div>
 
