--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
   <h1 class="display-4">About</h1>
   <p class="lead">
-    Software Engineer that develops innovative solutions to complex problems with a quantitative approach. 
+    Software Engineer and data scientist that develops innovative solutions to complex problems with a quantitative approach. 
     An academic background in physics and mathematics has nurtured analytical and problem solving skills. 
     Flexibility to collaborate with colleagues from diverse backgrounds and skill sets, developed through prior experience in technology and media sectors.
   </p>
@@ -90,9 +90,8 @@
 
 <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
   <h1 class="display-4">Links</h1>
-  <a class="btn btn-lg btn-primary" href="https://drive.google.com/drive/folders/1M4e2_xBmtTwPDul4MwkMFd8QjN1noC3e?usp=sharing" role="button" target="_blank">Resume</a>
   <a class="btn btn-lg btn-primary" href="https://www.linkedin.com/in/eric-mestiza" role="button" target="_blank">LinkedIn</a>
-  <a class="btn btn-lg btn-primary" href="https://github.com/emestiza" role="button" target="_blank">GitHub</a>
+  <a class="btn btn-lg btn-primary" href="https://github.com/em008" role="button" target="_blank">GitHub</a>
 </div>
 
 <hr class="featurette-divider">
