--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   
     <header>
       <nav class="navbar navbar-expand-md navbar-dark">
-    <h3 class="text-white">Portfolio</h3>
+    <h2>Portfolio</h2>
       <button
         class="navbar-toggler collapsed"
         type="button"
@@ -45,14 +45,14 @@
       </button>
       <div class="navbar-collapse collapse" id="navbarToggleExternalContent">
         <ul class="navbar-nav mr-auto">
-          <li class="text-white nav-item active">
-            <a class="nav-link text-white" href="index.html">Home</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="text-white nav-item active">
-            <a class="nav-link text-white" href="about.html">About</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="about.html">About</a>
           </li>
-          <li class="text-white nav-item active">
-            <a class="nav-link text-white" href="contact.html">Contact</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -63,9 +63,13 @@
 
 
 <div class="jumbotron">
-  <div class="container text-center">
-    <h1 class="text-white">Hello, I'm Eric.</h1>      
-    <p class="text-white">I'm a software engineer and data scientist.</p>
+  <div>
+    <h2>Hello, I'm Eric, a software engineer and data scientist.</h2>      
+    <p>
+    I develop innovative solutions to complex problems with a quantitative approach. 
+    An academic background in physics and mathematics has nurtured analytical and problem solving skills. 
+    Flexibility to collaborate with colleagues from diverse backgrounds and skill sets, developed through prior experience in technology and media sectors.
+    </p>
   </div>
 </div>
 
@@ -77,18 +81,18 @@
 
     <hr class="featurette-divider">
     
-    <h1 class="display-4">Software Engineering</h1>
+    <h2 class="display-4">Software Engineering</h2>
 
     <div class="row">
 
       <div class="col-lg-4">
         <img src="https://res.cloudinary.com/dssciwyew/image/upload/v1601045244/P4.png" width="190" height="140">
-        <h2>Study Organizer</h2>
+        <h3>Study Organizer</h3>
         <div class="btn-group">
           <p>
-          <a type="button" class="btn btn-primary" href="https://emp4.netlify.app/#/signup?URL=https%3A%2F%2Femp4backend.herokuapp.com" target="_blank">App</a>
-          <a type="button" class="btn btn-primary" href="https://github.com/em008/project-4-frontend" target="_blank">Front-end Repo</a>
-          <a type="button" class="btn btn-primary" href="https://github.com/em008/project-4-backend" target="_blank">Back-end Repo</a>
+          <a class="btn btn-lg btn-primary" href="https://emp4.netlify.app/#/signup?URL=https%3A%2F%2Femp4backend.herokuapp.com" role="button" target="_blank">App</a>
+          <a class="btn btn-lg btn-primary" href="https://github.com/em008/project-4-frontend" role="button" target="_blank">Front-end Repo</a>
+          <a class="btn btn-lg btn-primary" href="https://github.com/em008/project-4-backend" role="button" target="_blank">Back-end Repo</a>            
           </p>
         </div>
         <p>
@@ -99,12 +103,12 @@
       </div>
       <div class="col-lg-4">
         <img src="https://res.cloudinary.com/dssciwyew/image/upload/v1601045244/P3.png" width="190" height="140">
-        <h2>Budget Tracker</h2>
+        <h3>Budget Tracker</h3>
         <div class="btn-group">
           <p>
-          <a type="button" class="btn btn-primary" href="http://finance-tracker.surge.sh/" target="_blank">App</a>
-          <a type="button" class="btn btn-primary" href="https://github.com/em008/project-3-frontend" target="_blank">Front-end Repo</a>
-          <a type="button" class="btn btn-primary" href="https://github.com/em008/project-3-backend" target="_blank">Back-end Repo</a>
+          <a class="btn btn-lg btn-primary" href="http://finance-tracker.surge.sh/" role="button" target="_blank">App</a>
+          <a class="btn btn-lg btn-primary" href="https://github.com/em008/project-3-frontend" role="button" target="_blank">Front-end Repo</a>
+          <a class="btn btn-lg btn-primary" href="https://github.com/em008/project-3-backend" role="button" target="_blank">Back-end Repo</a>
           </p>
         </div>
         <p>
@@ -115,12 +119,12 @@
       </div>
       <div class="col-lg-4">
         <img src="https://res.cloudinary.com/dssciwyew/image/upload/v1601045244/P2.png" width="190" height="140">
-        <h2>Job Application Tracker</h2>
+        <h3>Job Application Tracker</h3>
         <div class="btn-group">
           <p>
-          <a type="button" class="btn btn-primary" href="https://job-tracker-em.netlify.app/" target="_blank">App</a>
-          <a type="button" class="btn btn-primary" href="https://github.com/em008/project-2-frontend" target="_blank">Front-end Repo</a>
-          <a type="button" class="btn btn-primary" href="https://github.com/em008/project-2-frontend" target="_blank">Back-end Repo</a>
+          <a class="btn btn-lg btn-primary" href="https://job-tracker-em.netlify.app/" role="button" target="_blank">App</a>
+          <a class="btn btn-lg btn-primary" href="https://github.com/em008/project-2-frontend" role="button" target="_blank">Front-end Repo</a>
+          <a class="btn btn-lg btn-primary" href="https://github.com/em008/project-2-frontend" role="button" target="_blank">Back-end Repo</a>
           </p>
         </div>
         <p>
@@ -135,15 +139,15 @@
 
     <hr class="featurette-divider">
 
-    <h1 class="display-4">Data Engineering & Data Science</h1>
+    <h2 class="display-4">Data Engineering & Data Science</h2>
 
     <div class="row">
 
       <div class="col-lg-4">
-        <h2>Web Scraper</h2>
+        <h3>Web Scraper</h3>
         <div class="btn-group">
           <p>
-          <a type="button" class="btn btn-primary" href="https://github.com/em008/Python-Web-Scraper-Practice" target="_blank">Code Repo</a>
+          <a type="button" class="btn btn-primary" href="https://github.com/em008/Python-Web-Scraper-Practice" role="button" target="_blank">Code Repo</a>
           </p>
         </div>
         <p>
@@ -151,10 +155,10 @@
         </p>
       </div>
       <div class="col-lg-4">
-        <h2>MNIST</h2>
+        <h3>MNIST</h3>
         <div class="btn-group">
           <p>
-          <a type="button" class="btn btn-primary" href="https://github.com/em008/MNIST-Project" target="_blank">Code Repo</a>
+          <a type="button" class="btn btn-primary" href="https://github.com/em008/MNIST-Project" role="button" target="_blank">Code Repo</a>
           </p>
         </div>
         <p>
@@ -163,10 +167,10 @@
         </p>
       </div>
       <div class="col-lg-4">
-        <h2>MovieLens</h2>
+        <h3>MovieLens</h3>
         <div class="btn-group">
           <p>
-          <a type="button" class="btn btn-primary" href="https://github.com/em008/MovieLens-Project" target="_blank">Code Repo</a>
+          <a type="button" class="btn btn-primary" href="https://github.com/em008/MovieLens-Project" role="button" target="_blank">Code Repo</a>
           </p>
         </div>
         <p>
