--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 
 <div class="jumbotron">
   <div>
-    <h2>Hello, I'm Eric, a software engineer and data scientist.</h2>      
-    <p>
+    <p>Hello, I'm Eric, a software engineer and data scientist.
     I develop innovative solutions to complex problems with a quantitative approach. 
     An academic background in physics and mathematics has nurtured analytical and problem solving skills. 
     Flexibility to collaborate with colleagues from diverse backgrounds and skill sets, developed through prior experience in technology and media sectors.
@@ -147,7 +146,7 @@
         <h3>Web Scraper</h3>
         <div class="btn-group">
           <p>
-          <a type="button" class="btn btn-primary" href="https://github.com/em008/Python-Web-Scraper-Practice" role="button" target="_blank">Code Repo</a>
+           <a class="btn btn-lg btn-primary" href="https://github.com/em008/Python-Web-Scraper-Practice" role="button" target="_blank">Code Repo</a>
           </p>
         </div>
         <p>
@@ -158,7 +157,7 @@
         <h3>MNIST</h3>
         <div class="btn-group">
           <p>
-          <a type="button" class="btn btn-primary" href="https://github.com/em008/MNIST-Project" role="button" target="_blank">Code Repo</a>
+           <a class="btn btn-lg btn-primary" href="https://github.com/em008/MNIST-Project" role="button" target="_blank">Code Repo</a>
           </p>
         </div>
         <p>
@@ -170,7 +169,7 @@
         <h3>MovieLens</h3>
         <div class="btn-group">
           <p>
-          <a type="button" class="btn btn-primary" href="https://github.com/em008/MovieLens-Project" role="button" target="_blank">Code Repo</a>
+            <a class="btn btn-lg btn-primary" href="https://github.com/em008/MovieLens-Project" role="button" target="_blank">Code Repo</a>
           </p>
         </div>
         <p>
