--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@
 
 <div class="jumbotron">
   <div>
-    <p>Hello, I'm Eric, a software engineer and data scientist.
+    <p><b>
+    Hello, I'm Eric, a software engineer and data scientist.
     I develop innovative solutions to complex problems with a quantitative approach. 
     An academic background in physics and mathematics has nurtured analytical and problem solving skills. 
     Flexibility to collaborate with colleagues from diverse backgrounds and skill sets, developed through prior experience in technology and media sectors.
-    </p>
+    </b></p>
   </div>
 </div>
 
@@ -80,7 +81,7 @@
 
     <hr class="featurette-divider">
     
-    <h2 class="display-4">Software Engineering</h2>
+    <h2>Software Engineering</h2>
 
     <div class="row">
 
@@ -138,7 +139,7 @@
 
     <hr class="featurette-divider">
 
-    <h2 class="display-4">Data Engineering & Data Science</h2>
+    <h2>Data Engineering & Data Science</h2>
 
     <div class="row">
 
