--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   
     <header>
       <nav class="navbar navbar-expand-md navbar-dark">
-    <h2>Portfolio</h2>
+<!--     <h2>Portfolio</h2> -->
       <button
         class="navbar-toggler collapsed"
         type="button"
@@ -65,7 +65,7 @@
 <div class="jumbotron">
   <div>
     <p><b>
-    Hello, I'm Eric, a software engineer and data scientist.
+    Hello, I'm a software engineer and data scientist.
     I develop innovative solutions to complex problems with a quantitative approach. 
     An academic background in physics and mathematics has nurtured analytical and problem solving skills. 
     Flexibility to collaborate with colleagues from diverse backgrounds and skill sets, developed through prior experience in technology and media sectors.
