--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
   
     <header>
       <nav class="navbar navbar-expand-md navbar-dark">
-    <h3 class="text-white">Portfolio</h3>
+<!--     <h3 class="text-white">Portfolio</h3> -->
       <button
         class="navbar-toggler collapsed"
         type="button"
