--- a/about.html
+++ b/about.html
@@ -40,9 +40,11 @@
           <li class="text-white nav-item active">
             <a class="nav-link text-white" href="about.html">About</a>
           </li>
-          <li class="text-white nav-item active">
+          
+<!--           <li class="text-white nav-item active">
             <a class="nav-link text-white" href="contact.html">Contact</a>
-          </li>
+          </li> -->
+          
         </ul>
       </div>
     </nav>
