--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
   <!-- FOOTER -->
   <footer class="container">
     <p class="float-right"><a href="#">Back to top</a></p>
-    <p>&copy; 2022. &middot; <a href="https://github.com/em008" target="_blank">GitHub</a></p>
+    <p> <a href="https://github.com/em008" target="_blank">GitHub</a> <a href="https://github.com/em008" target="_blank">LinkedIn</a> </p>
   </footer>
 </main>
 
