--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
           <p>
            <a class="btn btn-lg btn-primary" href="https://github.com/em008/MNIST-with-TensorFlow-Keras-and-deep-learning" role="button" target="_blank">Code Repo</a>
           </p>
+
+          <button>
+            <img src="https://t4.ftcdn.net/jpg/03/85/94/91/360_F_385949189_W1ydL4Z3c6Uy2OfB9rZNdbxVaIMOs16F.jpg" alt="GitHub Logo" href="https://github.com/em008/MNIST-with-TensorFlow-Keras-and-deep-learning">
+          </button>
+
+          
         </div>
         <p>
           Developed and train neural network with deep learning framework that classifies digit images with 99% accuracy
