--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </p>
 
           <button>
-            <img src="https://t4.ftcdn.net/jpg/03/85/94/91/360_F_385949189_W1ydL4Z3c6Uy2OfB9rZNdbxVaIMOs16F.jpg" alt="GitHub Logo" href="https://github.com/em008/MNIST-with-TensorFlow-Keras-and-deep-learning" role="button" target="_blank">
+            <img src="github-mark.png" alt="GitHub Logo" href="https://github.com/em008/MNIST-with-TensorFlow-Keras-and-deep-learning" role="button" target="_blank">
           </button>
 
           
