--- a/index.html
+++ b/index.html
@@ -94,9 +94,14 @@
            <a class="btn btn-lg btn-primary" href="https://github.com/em008/MNIST-with-TensorFlow-Keras-and-deep-learning" role="button" target="_blank">Code Repo</a>
           </p>
 
-          <button>
+<!--           <button>
             <img src="github-mark.png" alt="GitHub Logo" href="https://github.com/em008/MNIST-with-TensorFlow-Keras-and-deep-learning" role="button" target="_blank">
-          </button>
+          </button> -->
+
+        <a href="https://github.com/em008/MNIST-with-TensorFlow-Keras-and-deep-learning" class="button">
+        <img src="github-mark.png" alt="Image Description">
+        Visit Example
+        </a>
 
           
         </div>
