--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <main role="main">
 
 
-<div class="jumbotron">
+<!-- <div class="jumbotron">
   <div>
     <p><b>
     Hello, I'm a software engineer and data scientist.
@@ -73,13 +73,22 @@
     Flexibility to collaborate with colleagues from diverse backgrounds and skill sets, developed through prior experience in technology and media sectors.
     </b></p>
   </div>
-</div>
+</div> -->
 
   <!-- Wrap the rest of the page in another container to center all the content. -->
 
   <div class="container">
 
-    <!-- Three columns of text below the jumbotron-->
+      <div>
+        <p><b>
+        Hello, I'm a software engineer and data scientist.
+        I develop innovative solutions to complex problems with a quantitative approach. 
+        An academic background in physics and mathematics has nurtured analytical and problem solving skills. 
+        Flexibility to collaborate with colleagues from diverse backgrounds and skill sets, developed through prior experience in technology and media sectors.
+        </b></p>
+      </div>
+
+    <!-- Three columns of text -->
 
     <hr class="featurette-divider">
 
