--- a/index.html
+++ b/index.html
@@ -86,54 +86,41 @@
       
       <div class="col-lg-4">
         <h3>Deep Learning & MNIST</h3>
-<!--         <div class="btn-group">
-          <p>
-             <a href="https://github.com/em008/MNIST-with-TensorFlow-Keras-and-deep-learning" class="button"> <img src="github-mark.png" alt="Image Description"> GitHub </a>
-          </p>
-        </div> -->
         <p>
           Developed and train neural network with deep learning framework that classifies digit images with 99% accuracy
         </p>
-
         <p>
           <a href="https://github.com/em008/MNIST-with-TensorFlow-Keras-and-deep-learning" class="button"> <img src="github-mark.png" alt="Image Description"> GitHub </a>
         </p>
-        
       </div>
 
       <div class="col-lg-4">
         <h3>Data Web Scraper</h3>
-        <div class="btn-group">
-          <p>
-           <a class="btn btn-lg btn-primary" href="https://github.com/em008/Python-Web-Scraper-Practice" role="button" target="_blank">Code Repo</a>
-          </p>
-        </div>
         <p>
           Developed an automated web scraping tool for data collection using Python, Beautiful Soup, Selenium, and NLTK. 
+        </p>
+        <p>
+          <a href="https://github.com/em008/Python-Web-Scraper-Practice" class="button"> <img src="github-mark.png" alt="Image Description"> GitHub </a>
         </p>
       </div>
       <div class="col-lg-4">
         <h3>k-NN Algorithm & MNIST</h3>
-        <div class="btn-group">
-          <p>
-           <a class="btn btn-lg btn-primary" href="https://github.com/em008/MNIST-Project" role="button" target="_blank">Code Repo</a>
-          </p>
-        </div>
         <p>
         Trained a machine learning algorithm using k-nearest neighbors method to get high accuracy in processing readability of images. 
         Utilized R to analyze the MNIST dataset.        
         </p>
+        <p>
+          <a href="https://github.com/em008/MNIST-Project" class="button"> <img src="github-mark.png" alt="Image Description"> GitHub </a>
+        </p>
       </div>
       <div class="col-lg-4">
         <h3>Matrix Factorization & MovieLens,</h3>
-        <div class="btn-group">
-          <p>
-            <a class="btn btn-lg btn-primary" href="https://github.com/em008/MovieLens-Project" role="button" target="_blank">Code Repo</a>
-          </p>
-        </div>
         <p>
         Trained a machine learning algorithm using matrix factorization method. 
         Developed a film recommendation engine using R to analyze the MovieLens dataset. 
+        </p>
+        <p>
+          <a href="https://github.com/em008/MovieLens-Project" class="button"> <img src="github-mark.png" alt="Image Description"> GitHub </a>
         </p>
       </div>
 
