--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <hr class="featurette-divider">
 
-    <h2>Data Science</h2>
+    <h2>Data Science & Machine Learning Projects</h2>
 
     <div class="row">
       
@@ -128,7 +128,7 @@
 
         <hr class="featurette-divider">
     
-    <h2>Software Engineering</h2>
+    <h2>Software Engineering Projects</h2>
 
     <div class="row">
 
