--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           Developed and train neural network with deep learning framework that classifies digit images with 99% accuracy
         </p>
         <p>
-          <a href="https://github.com/em008/MNIST-with-TensorFlow-Keras-and-deep-learning" class="button"> <img src="github-mark.png" alt="Image Description"> </a>
+          <a href="https://github.com/em008/MNIST-with-TensorFlow-Keras-and-deep-learning" class="button"> <img src="github-mark.png" alt="GitHub Image"> </a>
         </p>
       </div>
 
@@ -100,7 +100,7 @@
           Developed an automated web scraping tool for data collection using Python, Beautiful Soup, Selenium, and NLTK. 
         </p>
         <p>
-          <a href="https://github.com/em008/Python-Web-Scraper-Practice" class="button"> <img src="github-mark.png" alt="Image Description"> </a>
+          <a href="https://github.com/em008/Python-Web-Scraper-Practice" class="button"> <img src="github-mark.png" alt="GitHub Image"> </a>
         </p>
       </div>
       <div class="col-lg-4">
@@ -110,7 +110,7 @@
         Utilized R to analyze the MNIST dataset.        
         </p>
         <p>
-          <a href="https://github.com/em008/MNIST-Project" class="button"> <img src="github-mark.png" alt="Image Description"> </a>
+          <a href="https://github.com/em008/MNIST-Project" class="button"> <img src="github-mark.png" alt="GitHub Image"> </a>
         </p>
       </div>
       <div class="col-lg-4">
@@ -120,7 +120,7 @@
         Developed a film recommendation engine using R to analyze the MovieLens dataset. 
         </p>
         <p>
-          <a href="https://github.com/em008/MovieLens-Project" class="button"> <img src="github-mark.png" alt="Image Description"> </a>
+          <a href="https://github.com/em008/MovieLens-Project" class="button"> <img src="github-mark.png" alt="GitHub Image"> </a>
         </p>
       </div>
 
@@ -135,20 +135,15 @@
       <div class="col-lg-4">
         <img src="https://res.cloudinary.com/dssciwyew/image/upload/v1601045244/P4.png" width="190" height="140">
         <h3>Study Organizer</h3>
-        <div class="btn-group">
-          <p>
-          <a class="btn btn-lg btn-primary" href="https://emp4.netlify.app/#/signup?URL=https%3A%2F%2Femp4backend.herokuapp.com" role="button" target="_blank">App</a>
-          <a class="btn btn-lg btn-primary" href="https://github.com/em008/project-4-frontend" role="button" target="_blank">Front-end Repo</a>
-          <a class="btn btn-lg btn-primary" href="https://github.com/em008/project-4-backend" role="button" target="_blank">Back-end Repo</a>            
-          </p>
-        </div>
         <p>
         Application designed to help study organization. This full-stack application incorporates CRUD functionality and responsive design.
         JavaScript, Vue.js framework, and Buefy were used for the front-end components and CRUD functionality.
         Python and the Django framework were used for data model creation and JWT authentication in the back-end API.
         </p>
         <p>
-          <a href=href="https://emp4.netlify.app/#/signup?URL=https%3A%2F%2Femp4backend.herokuapp.com" class="button"> <img src="github-mark.png" alt="Image Description"> </a>
+          <a href="https://emp4.netlify.app/#/signup?URL=https%3A%2F%2Femp4backend.herokuapp.com" class="button"> <img src="website-mark.jpeg" alt="GitHub Image"> </a>
+          <a href="https://github.com/em008/project-4-frontend" class="button"> <img src="website-mark.jpeg" alt="Website Image"> </a>
+          <a href="https://github.com/em008/project-4-backend" class="button"> <img src="website-mark.jpeg" alt="Website Image"> </a>
         </p>
       </div>
       <div class="col-lg-4">
