--- a/index.html
+++ b/index.html
@@ -133,7 +133,6 @@
     <div class="row">
 
       <div class="col-lg-4">
-        <img src="https://res.cloudinary.com/dssciwyew/image/upload/v1601045244/P4.png" width="190" height="140">
         <h3>Study Organizer</h3>
         <p>
         Application designed to help study organization. This full-stack application incorporates CRUD functionality and responsive design.
@@ -141,41 +140,35 @@
         Python and the Django framework were used for data model creation and JWT authentication in the back-end API.
         </p>
         <p>
-          <a href="https://emp4.netlify.app/#/signup?URL=https%3A%2F%2Femp4backend.herokuapp.com" class="button"> <img src="website-mark.jpeg" alt="GitHub Image"> </a>
-          <a href="https://github.com/em008/project-4-frontend" class="button"> <img src="website-mark.jpeg" alt="Website Image"> </a>
-          <a href="https://github.com/em008/project-4-backend" class="button"> <img src="website-mark.jpeg" alt="Website Image"> </a>
+          <a href="https://emp4.netlify.app/#/signup?URL=https%3A%2F%2Femp4backend.herokuapp.com" class="button"> <img src="website-mark.jpeg" alt="Website Image"> </a>
+          <a href="https://github.com/em008/project-4-frontend" class="button"> <img src="github-mark.png" alt="GitHub Image"> </a>
+          <a href="https://github.com/em008/project-4-backend" class="button"> <img src="github-mark.png" alt="GitHub Image"> </a>
         </p>
       </div>
       <div class="col-lg-4">
-        <img src="https://res.cloudinary.com/dssciwyew/image/upload/v1601045244/P3.png" width="190" height="140">
         <h3>Budget Tracker</h3>
-        <div class="btn-group">
-          <p>
-          <a class="btn btn-lg btn-primary" href="http://finance-tracker.surge.sh/" role="button" target="_blank">App</a>
-          <a class="btn btn-lg btn-primary" href="https://github.com/em008/project-3-frontend" role="button" target="_blank">Front-end Repo</a>
-          <a class="btn btn-lg btn-primary" href="https://github.com/em008/project-3-backend" role="button" target="_blank">Back-end Repo</a>
-          </p>
-        </div>
         <p>
         Application designed to help track personal budgets. This full-stack application incorporates CRUD functionality and responsive design.
         JavaScript, jQuery, Vue.js framework, and Bootstrap were used for the front-end components and CRUD functionality. D3.js libary is uesd for data visualization.
         Ruby and Ruby on Rails were used for data model creation and JWT authentication in the back-end API.
         </p>
+        <p>
+          <a href="http://finance-tracker.surge.sh/" class="button"> <img src="website-mark.jpeg" alt="Website Image"> </a>
+          <a href="https://github.com/em008/project-3-frontend" class="button"> <img src="github-mark.png" alt="GitHub Image"> </a>
+          <a href="https://github.com/em008/project-3-backend" class="button"> <img src="github-mark.png" alt="GitHub Image"> </a>
+        </p>
       </div>
       <div class="col-lg-4">
-        <img src="https://res.cloudinary.com/dssciwyew/image/upload/v1601045244/P2.png" width="190" height="140">
         <h3>Job Application Tracker</h3>
-        <div class="btn-group">
-          <p>
-          <a class="btn btn-lg btn-primary" href="https://job-tracker-em.netlify.app/" role="button" target="_blank">App</a>
-          <a class="btn btn-lg btn-primary" href="https://github.com/em008/project-2-frontend" role="button" target="_blank">Front-end Repo</a>
-          <a class="btn btn-lg btn-primary" href="https://github.com/em008/project-2-frontend" role="button" target="_blank">Back-end Repo</a>
-          </p>
-        </div>
         <p>
         Application designed to help track number of job applications. This full-stack application incorporates CRUD functionality and responsive design.
         JavaScript and jQuery were used for the front-end CRUD functionality.
         In the back-end data models and API are built using Node.js, Express.js, MongoDB, and Mongoose.
+        </p>
+        <p>
+          <a href="https://job-tracker-em.netlify.app/" class="button"> <img src="website-mark.jpeg" alt="Website Image"> </a>
+          <a href="https://github.com/em008/project-2-frontend" class="button"> <img src="github-mark.png" alt="GitHub Image"> </a>
+          <a href="https://github.com/em008/project-2-backend" class="button"> <img src="github-mark.png" alt="GitHub Image"> </a>
         </p>
       </div>
 
