--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </p>
       </div>
       <div class="col-lg-4">
-        <h3>K-Nearest Neighbors Algorithm & MNIST</h3>
+        <h3>K-Nearest Neighbors & MNIST</h3>
         <p>
         Trained a machine learning algorithm using k-nearest neighbors method to get high accuracy in processing readability of images. 
         Utilized R to analyze the MNIST dataset.        
@@ -114,7 +114,7 @@
         </p>
       </div>
       <div class="col-lg-4">
-        <h3>Matrix Factorization & MovieLens,</h3>
+        <h3>Matrix Factorization & MovieLens</h3>
         <p>
         Trained a machine learning algorithm using matrix factorization method. 
         Developed a film recommendation engine using R to analyze the MovieLens dataset. 
