--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
       <div class="col-lg-4">
         <h3>Study Organizer</h3>
         <p>
-        Application designed to help study organization. This full-stack application incorporates CRUD functionality and responsive design.
-        JavaScript, Vue.js framework, and Buefy were used for the front-end components and CRUD functionality.
-        Python and the Django framework were used for data model creation and JWT authentication in the back-end API.
+        Application designed to help study organization. This fullstack application incorporates CRUD functionality and responsive design.
+        JavaScript, Vue.js framework, and Buefy were used for the frontend components and CRUD functionality.
+        Python and the Django framework were used for data model creation and JWT authentication in the backend API.
         </p>
         <p>
           <a href="https://emp4.netlify.app/#/signup?URL=https%3A%2F%2Femp4backend.herokuapp.com" class="button"> <img src="website-mark.jpeg" alt="Website Image"></a>
@@ -148,9 +148,9 @@
       <div class="col-lg-4">
         <h3>Budget Tracker</h3>
         <p>
-        Application designed to help track personal budgets. This full-stack application incorporates CRUD functionality and responsive design.
-        JavaScript, jQuery, Vue.js framework, and Bootstrap were used for the front-end components and CRUD functionality. D3.js libary is uesd for data visualization.
-        Ruby and Ruby on Rails were used for data model creation and JWT authentication in the back-end API.
+        Application designed to help track personal budgets. This fullstack application incorporates CRUD functionality and responsive design.
+        JavaScript, jQuery, Vue.js framework, and Bootstrap were used for the frontend components and CRUD functionality. D3.js libary is uesd for data visualization.
+        Ruby and Ruby on Rails were used for data model creation and JWT authentication in the backend API.
         </p>
         <p>
           <a href="http://finance-tracker.surge.sh/" class="button"> <img src="website-mark.jpeg" alt="Website Image"></a>
@@ -161,9 +161,9 @@
       <div class="col-lg-4">
         <h3>Job Application Tracker</h3>
         <p>
-        Application designed to help track number of job applications. This full-stack application incorporates CRUD functionality and responsive design.
-        JavaScript and jQuery were used for the front-end CRUD functionality.
-        In the back-end data models and API are built using Node.js, Express.js, MongoDB, and Mongoose.
+        Application designed to help track number of job applications. This fullstack application incorporates CRUD functionality and responsive design.
+        JavaScript and jQuery were used for the frontend CRUD functionality.
+        In the backend data models and API are built using Node.js, Express.js, MongoDB, and Mongoose.
         </p>
         <p>
           <a href="https://job-tracker-em.netlify.app/" class="button"> <img src="website-mark.jpeg" alt="Website Image"></a>
@@ -179,7 +179,7 @@
   <!-- FOOTER -->
   <footer class="container">
     <p class="float-right"><a href="#">Back to top</a></p>
-    <p> <a href="https://github.com/em008" target="_blank">GitHub</a> <a href="https://github.com/em008" target="_blank">LinkedIn</a> </p>
+<!--     <p> <a href="https://github.com/em008" target="_blank">GitHub</a> <a href="https://github.com/em008" target="_blank">LinkedIn</a> </p> -->
   </footer>
 </main>
 
