--- a/about.html
+++ b/about.html
@@ -52,8 +52,11 @@
 
 <main role="main">
 
-<div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h1 class="display-4">About</h1>
+<!-- Wrap the rest of the page in another container to center all the content. -->
+<div class="container">
+
+<div>
+  <h2 class="display-4">About</h2>
   <p class="lead">
     Software Engineer and data scientist that develops innovative solutions to complex problems with a quantitative approach. 
     An academic background in physics and mathematics has nurtured analytical and problem solving skills. 
@@ -61,8 +64,8 @@
   </p>
 </div>
 
-<div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h1 class="display-4">Languages and Technologies</h1>
+<div>
+  <h2 class="display-4">Languages and Technologies</h2>
   <p class="lead">
     Languages: Python, JavaScript, Java, Ruby, HTML5, CSS, R, Octave
   </p>
@@ -81,7 +84,7 @@
 </div>
 
 <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h1 class="display-4">Experience</h1>
+  <h2 class="display-4">Experience</h2>
   <p class="lead">
     Experience with web scraping, data visualization, data wrangling, probability, inference, and data modeling with practical application. 
   </p>
@@ -91,8 +94,10 @@
 </div>
 
 <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h1 class="display-4">Links</h1>
+  <h2 class="display-4">Links</h2>
   <a class="btn btn-lg btn-primary" href="https://github.com/em008" role="button" target="_blank">GitHub</a>
+</div>
+
 </div>
 
 <hr class="featurette-divider">
