--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
   
     <header>
       <nav class="navbar navbar-expand-md navbar-dark">
-<!--     <h3 class="text-white">Portfolio</h3> -->
+      <h3>Portfolio</h3>
       <button
         class="navbar-toggler collapsed"
         type="button"
@@ -56,7 +56,7 @@
 <div class="container">
 
 <div>
-  <h2 class="display-4">About</h2>
+  <h3 class="display-4">About</h3>
   <p class="lead">
     Software Engineer and data scientist that develops innovative solutions to complex problems with a quantitative approach. 
     An academic background in physics and mathematics has nurtured analytical and problem solving skills. 
@@ -65,7 +65,7 @@
 </div>
 
 <div>
-  <h2 class="display-4">Languages and Technologies</h2>
+  <h3 class="display-4">Languages and Technologies</h3>
   <p class="lead">
     Languages: Python, JavaScript, Java, Ruby, HTML5, CSS, R, Octave
   </p>
@@ -84,7 +84,7 @@
 </div>
 
 <div>
-  <h2 class="display-4">Experience</h2>
+  <h3 class="display-4">Experience</h3>
   <p class="lead">
     Experience with web scraping, data visualization, data wrangling, probability, inference, and data modeling with practical application. 
   </p>
@@ -94,7 +94,7 @@
 </div>
 
 <div>
-  <h2 class="display-4">Links</h2>
+  <h3 class="display-4">Links</h3>
   <a class="btn btn-lg btn-primary" href="https://github.com/em008" role="button" target="_blank">GitHub</a>
 </div>
 
@@ -108,12 +108,6 @@
 <!--     <p> <a href="https://github.com/em008" target="_blank">GitHub</a> <a href="https://github.com/em008" target="_blank">LinkedIn</a> </p> -->
   </footer>
 </main>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<!--     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
-<!--     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script> -->
-<!--     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script> -->
 
   </body>
 </html>
