--- a/index.html
+++ b/index.html
@@ -2,17 +2,6 @@
 <html lang="en">
 <html lang="en">
   <head>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172911129-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-172911129-1');
-    </script>
-
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,13 +14,13 @@
     
     <link rel="stylesheet" href="style.css">
 
-    <title>Portfolio</title>
+    <title>Portfolio Website</title>
   </head>
   <body>
   
     <header>
       <nav class="navbar navbar-expand-md navbar-dark">
-<!--     <h2>Portfolio</h2> -->
+      <h3>Portfolio</h3>
       <button
         class="navbar-toggler collapsed"
         type="button"
@@ -182,12 +171,6 @@
 <!--     <p> <a href="https://github.com/em008" target="_blank">GitHub</a> <a href="https://github.com/em008" target="_blank">LinkedIn</a> </p> -->
   </footer>
 </main>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
  
   </body>
 </html>
