--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     
     <link rel="stylesheet" href="style.css">
 
-    <title>Portfolio Site</title>
+    <title>Portfolio Website</title>
   </head>
   <body>
   
@@ -56,7 +56,7 @@
 <div class="container">
 
 <div>
-  <h3 class="display-4">About</h3>
+  <h2>About</h2>
   <p class="lead">
     Software Engineer and data scientist that develops innovative solutions to complex problems with a quantitative approach. 
     An academic background in physics and mathematics has nurtured analytical and problem solving skills. 
@@ -65,7 +65,7 @@
 </div>
 
 <div>
-  <h3 class="display-4">Languages and Technologies</h3>
+  <h2>Languages and Technologies</h2>
   <p class="lead">
     Languages: Python, JavaScript, Java, Ruby, HTML5, CSS, R, Octave
   </p>
@@ -84,7 +84,7 @@
 </div>
 
 <div>
-  <h3 class="display-4">Experience</h3>
+  <h2>Experience</h2>
   <p class="lead">
     Experience with web scraping, data visualization, data wrangling, probability, inference, and data modeling with practical application. 
   </p>
@@ -94,7 +94,7 @@
 </div>
 
 <div>
-  <h3 class="display-4">Links</h3>
+  <h2>Links</h2>
   <a class="btn btn-lg btn-primary" href="https://github.com/em008" role="button" target="_blank">GitHub</a>
 </div>
 
