--- a/about.html
+++ b/about.html
@@ -67,19 +67,19 @@
 <div>
   <h2>Languages and Technologies</h2>
   <p>
-    Languages: Python, JavaScript, Java, Ruby, HTML5, CSS, R, Octave
+    Languages: Python, JavaScript, TypeScript, Ruby, Java, R, HTML, CSS
   </p>
   <p>
-    Frameworks: Django, Flask, Ruby on Rails, Express.js, Node.js, Bootstrap
+    Frameworks: Django, Flask, Express, Node, Ruby on Rails, Spring Boot
   </p>
   <p>
     Databases: SQL, MongoDB
   </p>
   <p>
-    Cloud: AWS, Azure
+    Cloud: Microsoft Azure, Google Cloud
   </p>
   <p>
-    Technologies: Linux, Git, Kubernetes, Docker, Ansible, Jenkins, Selenium, Heroku, Netlify, Postman
+    Technologies: Git, Linux, PowerShell, Docker, Kubernetes, Postman, Selenium, Jupyter
   </p>
 </div>
 
@@ -95,7 +95,7 @@
 
 <div>
   <h2>Links</h2>
-  <a class="btn btn-lg btn-primary" href="https://github.com/em008" role="button" target="_blank">GitHub</a>
+  <a href="https://github.com/em008" class="button"> <img src="github-mark.png" alt="GitHub Image"></a>
 </div>
 
 </div>
