--- a/index.html
+++ b/index.html
@@ -167,9 +167,10 @@
 
   <!-- FOOTER -->
   <footer class="container">
-    <p class="float-right"><a href="#">Back to top</a></p>
+<!--     <p class="float-right"><a href="#">Back to top</a></p> -->
 <!--     <p> <a href="https://github.com/em008" target="_blank">GitHub</a> <a href="https://github.com/em008" target="_blank">LinkedIn</a> </p> -->
   </footer>
+    
 </main>
  
   </body>
