--- a/about.html
+++ b/about.html
@@ -104,8 +104,8 @@
 
   <!-- FOOTER -->
   <footer class="container">
-<!--     <p class="float-right"><a href="#">Back to top</a></p>
-<!--     <p> <a href="https://github.com/em008" target="_blank">GitHub</a> <a href="https://github.com/em008" target="_blank">LinkedIn</a> </p> --> -->
+<!--     <p class="float-right"><a href="#">Back to top</a></p> -->
+<!--     <p> <a href="https://github.com/em008" target="_blank">GitHub</a> <a href="https://github.com/em008" target="_blank">LinkedIn</a> </p> -->
   </footer>
   
 </main>
