--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="col-lg-4">
         <h3>Deep Learning & MNIST</h3>
         <p>
-          Developed and train neural network with deep learning framework that classifies digit images with 99% accuracy
+          Developed and trained a neural network with a Python deep learning framework that classifies digit images with 99% accuracy.
         </p>
         <p>
           <a href="https://github.com/em008/MNIST-with-TensorFlow-Keras-and-deep-learning" class="button"> <img src="github-mark.png" alt="GitHub Image"></a>
