--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
     <div class="row">
       
       <div class="col-lg-4">
+        <h3>Neural Network Regression Model</h3>
+        <p>
+          Fullstack application with an integrated machine learning model built using TensorFlow and Keras. The model predicts future date frequency counts using previously collected data.
+        </p>
+        <p>
+          <a href="https://github.com/em008/ML-Model-With-UI" class="button"> <img src="github-mark.png" alt="GitHub Image"></a>
+        </p>
+      </div>
+      <div class="col-lg-4">
         <h3>Deep Learning & MNIST</h3>
         <p>
           Developed and trained a neural network with a Python deep learning framework that classifies digit images with 99% accuracy.
