--- a/index.html
+++ b/index.html
@@ -72,7 +72,16 @@
     <h2>Data Science & Machine Learning Projects</h2>
 
     <div class="row">
-      
+
+      <div class="col-lg-4">
+        <h3>Chatbot PDF Reader</h3>
+        <p>
+          Developed chatbot application using Python LangChain framework and Google FLAN large language model to read PDFs and answer questions about its content.
+        </p>
+        <p>
+          <a href="https://github.com/em008/Chatbot-PDF-Reader" class="button"> <img src="github-mark.png" alt="GitHub Image"></a>
+        </p>
+      </div>
       <div class="col-lg-4">
         <h3>Neural Network Regression Model</h3>
         <p>
